Fix loader overlay z-index.

--- a/src/components/Loader/styles.css
+++ b/src/components/Loader/styles.css
@@ -29,7 +29,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: -1;
+  z-index: 0;
 }
 
 .isLarge.isOverlay {
@@ -52,6 +52,7 @@
   width: 100%;
   height: 100%;
   animation: spin 1s infinite linear;
+  animation-play-state: running !important;
 }
 
 .isInverted .spinner {
